--- a/CompuCell3D/core/pyinterface/PlayerPythonNew/CMakeLists.txt
+++ b/CompuCell3D/core/pyinterface/PlayerPythonNew/CMakeLists.txt
@@ -28,6 +28,10 @@ if (${VTK_MAJOR_VERSION} EQUAL "8")
     SET(VTK_LIBS vtkRenderingVolume vtkInteractionStyle  vtkIOLegacy)
 endif()
 
+if (${VTK_MAJOR_VERSION} EQUAL "9")
+    SET(VTK_LIBS vtkRenderingVolume vtkInteractionStyle  vtkIOLegacy)
+endif()
+
 if (${VTK_MAJOR_VERSION} EQUAL "5")
     SET(VTK_LIBS vtkVolumeRendering vtkHybrid vtkFiltering vtkCommon)
 endif()
